tests/ui/type-alias-impl-trait/method_resolution_trait_method_from_opaque.next.stderr
error[E0282]: type annotations needed
  --> $DIR/method_resolution_trait_method_from_opaque.rs:28:18
   |
LL |         self.bar.next().unwrap();
   |                  ^^^^
   |
help: try using a fully qualified path to specify the expected types
   |
LL -         self.bar.next().unwrap();
LL +         <_ as Iterator>::next(&mut self.bar).unwrap();
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
